Updating trunk to v1.2.1
git-svn-id: https://plugins.svn.wordpress.org/theme-blvd-layout-builder/trunk@796245 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/admin/assets/css/builder-style.css
+++ b/includes/admin/assets/css/builder-style.css
@@ -1,6 +1,13 @@
 /* =Options Framework Overrides
 ----------------------------------------------- */
 
+#optionsframework {
+	background: transparent; /* Needed for screen options tab to show */
+}
+#screen-meta-links a.show-settings {
+	position: relative;
+	z-index: 2;
+}
 #builder_blvd #optionsframework .section {
 	padding-bottom: 30px;
 }
