--- a/includes/admin/assets/css/builder-style.css
+++ b/includes/admin/assets/css/builder-style.css
@@ -65,10 +65,14 @@
 }
 
 /* Main Sections */
-#builder_blvd #builder #featured, #builder_blvd #builder #primary, #builder_blvd #builder #featured_below{
+#builder_blvd #builder #featured,
+#builder_blvd #builder #primary,
+#builder_blvd #builder #featured_below{
 	position: relative;
 }
-#builder_blvd #builder #featured .sortable, #builder_blvd #builder #primary .sortable, #builder_blvd #builder #featured_below .sortable  {
+#builder_blvd #builder #featured .sortable,
+#builder_blvd #builder #primary .sortable,
+#builder_blvd #builder #featured_below .sortable {
 	background: #f8f8f8;
 	border: 1px dashed #dfdfdf;
 	-moz-border-radius: 5px;
@@ -77,7 +81,9 @@
 	margin: 0 0 40px 0;
 	padding: 10px;
 }
-#builder_blvd #builder #featured span.label, #builder_blvd #builder #primary span.label, #builder_blvd #builder #featured_below span.label {
+#builder_blvd #builder #featured span.label,
+#builder_blvd #builder #primary span.label,
+#builder_blvd #builder #featured_below span.label {
 	content: 'Featured Area';
 	background: #f8f8f8;
 	border: 1px dashed #dfdfdf;
@@ -221,10 +227,13 @@
 }
 #builder_blvd .meta-box-nav .icon-holder {
 	float: left;
-	margin: 5px 8px 0 0;
+	margin: 5px 12px 0 0;
 	position: relative;
 	width: 20px;
 	height: 20px;
+}
+#builder_blvd .meta-box-nav .icon-holder .tb-icon-commercial-building {
+	font-size: 18px;
 }
 #builder_blvd .meta-box-nav .icon-holder #icon-tb_builder {
 	background-position: -10px -5px;
@@ -323,10 +332,14 @@
 	-webkit-box-shadow: 0 0 0 #000;
 	box-shadow: 0 0 0 #000;
 }
-.postbox #builder_blvd #builder #featured span.label, .postbox  #builder_blvd #builder #primary span.label, .postbox #builder_blvd #builder #featured_below span.label {
+.postbox #builder_blvd #builder #featured span.label,
+.postbox  #builder_blvd #builder #primary span.label,
+.postbox #builder_blvd #builder #featured_below span.label {
 	background-color: #ffffff;
 }
-.postbox #builder_blvd #builder #featured .sortable, .postbox #builder_blvd #builder #primary .sortable, .postbox #builder_blvd #builder #featured_below .sortable {
+.postbox #builder_blvd #builder #featured .sortable,
+.postbox #builder_blvd #builder #primary .sortable,
+.postbox #builder_blvd #builder #featured_below .sortable {
 	background-color: #ffffff;
 }
 .postbox #builder_blvd .widget-name h3 {
@@ -363,6 +376,7 @@
 
 /* =Responsiveness
 ----------------------------------------------- */
+
 @media (max-width: 1120px) {
 	#builder_blvd #optionsframework .section .controls {
 		float: none;
@@ -375,4 +389,66 @@
 		max-width: inherit;
 		width: auto;
 	}
+}
+
+/* =WordPress 3.8 (MP6)
+-----------------------------------------------*/
+
+.themeblvd-ui .postbox #builder_blvd #optionsframework {
+	background: #ffffff;
+}
+.themeblvd-ui #metabox-builder .ajax-overlay {
+	background-color: #f9f9f9;
+}
+.themeblvd-ui #optionsframework .meta-box-nav .ajax-overlay {
+	background: #ffffff;
+}
+.themeblvd-ui #builder_blvd #edit_layout h2 {
+	font-size: 16px;
+}
+.themeblvd-ui #builder_blvd #edit_layout #titlediv select,
+.themeblvd-ui #builder_blvd #edit_layout #titlediv .button-secondary {
+	margin-top: 0;
+}
+.themeblvd-ui .postbox #builder_blvd h3 {
+	background: #f5f5f5;
+	border-bottom: 1px solid #dfdfdf;
+}
+.themeblvd-ui .postbox #builder_blvd .widget-name h3 {
+	background-color: #ffffff;
+	border-bottom: none;
+}
+.themeblvd-ui #builder_blvd .meta-box-nav li a {
+	-webkit-border-top-left-radius: 0;
+	-webkit-border-top-right-radius: 0;
+	-moz-border-radius-topleft: 0;
+	-moz-border-radius-topright: 0;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+.themeblvd-ui #builder_blvd .meta-box-nav li a.nav-tab-active {
+	background: #f5f5f5;
+	border-bottom-color: #f5f5f5;
+}
+.themeblvd-ui #builder_blvd #builder #featured .sortable,
+.themeblvd-ui #builder_blvd #builder #primary .sortable,
+.themeblvd-ui #builder_blvd #builder #featured_below .sortable {
+	padding-bottom: 0;
+}
+.themeblvd-ui #builder_blvd #builder #featured .sortable.empty,
+.themeblvd-ui #builder_blvd #builder #primary .sortable.empty,
+.themeblvd-ui #builder_blvd #builder #featured_below .sortable.empty {
+	padding-bottom: 10px;
+}
+.themeblvd-ui #builder_blvd #builder #featured .sortable,
+.themeblvd-ui #builder_blvd #builder #primary .sortable,
+.themeblvd-ui #builder_blvd #builder #featured_below .sortable,
+.themeblvd-ui #builder_blvd #builder #featured span.label,
+.themeblvd-ui #builder_blvd #builder #primary span.label,
+.themeblvd-ui #builder_blvd #builder #featured_below span.label {
+	background-color: #f8f8f8;
+	border-color: #cccccc;
+	-moz-border-radius: 0;
+	-webkit-border-radius: 0;
+	border-radius: 0;
 }
